tests/snapshots/tui_tests__thread_archived_no_input_box.snap
---
source: tests/tui_tests.rs
expression: output
---
#5 Old feature  Alice  2025-01-02 12:00:00  [ARCHIVED]                          
                                                                                
────────────────────────────────────────────────────────────────────────────────
  No longer needed.
