tests/snapshots/tui_tests__thread_branch.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 feature/dark-mode  Alice  2025-01-02 12:00:00                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Implement the dark theme toggle.                                              
│                                                                               
│ See design doc for details.                                                   
                                                                                
  Bob 2025-01-01 10:00:00                                                       
  Looking good                                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
