tests/snapshots/tui_tests__thread_branch_with_hidden_comment.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 feature-hide  Bob  2025-01-02 12:00:00                                       
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Branch with a hidden comment                                                  
                                                                                
  Bob 2025-01-02 10:00:00                                                       
  visible branch comment                                                        
                                                                                
    hidden                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
