tests/snapshots/tui_tests__thread_input_box_with_text.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 Test issue  Alice  2025-01-02 12:00:00                                       
                                                                                
────────────────────────────────────────────────────────────────────────────────
  Description                                                                   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment [NORMAL] ────────────────────────────────────────────────────────────┐
│Hello world                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
