tests/snapshots/tui_tests__thread_input_box_word_wrap.snap
---
source: tests/tui_tests.rs
assertion_line: 407
expression: output
---
#1 Test issue  Alice
                    
────────────────────
Description         
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
┌ Comment [NORMAL] ┐
│abcdefghijklmnop  │
│qrstuvwxyz        │
└──────────────────┘
