tests/snapshots/tui_tests__thread_issue.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 Fix login bug  Alice  2025-01-02 12:00:00                                    
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Users can't log in on mobile.                                                 
│                                                                               
│ Steps:                                                                        
│                                                                               
│ 1. Open app                                                                   
│ 2. Tap login                                                                  
                                                                                
  Bob 2025-01-01 10:00:00                                                       
  I can reproduce this                                                          
                                                                                
  Charlie 2025-01-01 11:00:00                                                   
  Fix is in progress                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
