tests/snapshots/tui_tests__thread_issue_number_display.snap
---
source: tests/tui_tests.rs
expression: output
---
#42 Fix login bug  Alice  2025-01-02 12:00:00                                   
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Description here                                                              
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
