tests/snapshots/tui_tests__thread_render_empty_comments.snap
---
source: tests/tui_tests.rs
expression: buffer_to_string(buffer)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│no comments                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Thread  (j/k=scroll  Ctrl-u/d=page  q=quit)───────────────────────────────────┐
│solo  ·  2024-01-01                                                           │
│just a description                                                            │
│                                                                              │
│──────────────────────────────────────────────────────────────────────────────│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
