tests/snapshots/tui_tests__thread_render_with_markdown.snap
---
source: tests/tui_tests.rs
expression: buffer_to_string(buffer)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│test thread                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Thread  (j/k=scroll  Ctrl-u/d=page  q=quit)───────────────────────────────────┐
│alice  ·  2024-06-15                                                          │
│bold                                                                          │
│header                                                                        │
│- list item                                                                   │
│                                                                              │
│──────────────────────────────────────────────────────────────────────────────│
│bob  ·  2024-06-16                                                            │
│This is a comment with code.                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
